package com.muhdila.jetcommerce.model

import com.muhdila.jetcommerce.R

object FakeItemsDataSource {
    val dummyItems = listOf(
        Items(1, R.drawable.t_shirt_smooth_fleece, "T-Shirt Fleece", 299000, "T-Shirt"),
        Items(2, R.drawable.t_shirt_waffle_henley, "T-Shirt Henley", 199000, "T-Shirt"),
        Items(3, R.drawable.t_shirt_waffle_crew, "T-Shirt Waffle", 199000, "T-Shirt"),
        Items(4, R.drawable.t_shirt_zip_long, "T-Shirt Zip Long", 299000, "T-Shirt"),
        Items(5, R.drawable.t_shirt_washed_cotton, "T-Shirt Washed", 299000, "T-Shirt"),
        Items(6, R.drawable.t_shirt_alrism, "T-Shirt Alrism", 299000, "T-Shirt"),
        Items(7, R.drawable.t_shirt_dry_color, "T-Shirt Dry Color", 249000, "T-Shirt"),
        Items(8, R.drawable.t_shirt_dry_ex, "T-Shirt Dry Ex", 229000, "T-Shirt"),
        Items(9, R.drawable.t_shirt_oversize_striped, "T-Shirt Oversize Strip", 359000, "T-Shirt"),
        Items(10, R.drawable.t_shirt_supima, "T-Shirt Supima", 349000, "T-Shirt"),
        Items(11, R.drawable.shirt_dry_ex, "Shirt Dry Ex", 299000, "Shirt"),
        Items(12, R.drawable.shirt_rugger, "Shirt Rugger", 399000, "Shirt"),
        Items(13, R.drawable.shirt_dry_pique, "Shirt Dry Pique", 279000, "Shirt"),
        Items(14, R.drawable.shirt_rugger_long, "Shirt Rugger Long", 299000, "Shirt"),
        Items(15, R.drawable.shirt_alrism, "Shirt Alrism", 349000, "Shirt"),
        Items(16, R.drawable.hoodie_dry_stretch, "Hoodie Dry Stretch", 549000, "Hoodie"),
        Items(17, R.drawable.hoodie_long_sleeve, "Hoodie Long Sleeve", 399000, "Hoodie"),
        Items(18, R.drawable.hoodie_sweat_zip, "Hoodie Sweat Zip", 499000, "Hoodie"),
        Items(19, R.drawable.hoodie_sweat_pullover, "Hoodie Weat Pullover", 399000, "Hoodie"),
        Items(20, R.drawable.hoodie_alrism, "Hoodie Alrism", 599000, "Hoodie"),
    )
}