...
    val shareMessage = stringResource(
        R.string.share_message,
        state.orderItem.count(),
        state.totalRequiredPrice
    )
    Column(
        modifier = modifier.fillMaxSize().testTag("Cart_Screen")
    ) {
        CenterAlignedTopAppBar(
            title = {
                Text(
                    text = stringResource(R.string.menu_cart),
                    modifier = Modifier
...
            onClick = {
                onOrderButtonClicked(shareMessage)
            },
            modifier = Modifier
                .padding(16.dp)
                .fillMaxWidth()
                .testTag("Total_Order")
        )
    }
}
