...

            IconButton(
                onClick = { navController.navigate(Screen.Cart.route) },
                modifier = Modifier
                    .align(Alignment.Bottom)
                    .size(40.dp)
                    .testTag("Icon_Bag_Shopping")
            ) {
                val icon: Painter = painterResource(id = R.drawable.ic_shopping_bag)
                Icon(
                    painter = icon,
                    contentDescription = "Icon Bag Shopping",
                    tint = MaterialTheme.colorScheme.onBackground
...
                contentDescription = "Image Profile",
                modifier = Modifier
                    .size(40.dp)
                    .clip(CircleShape)
                    .align(Alignment.Bottom)
                    .clickable { navController.navigate(Screen.Profile.route) }
                    .testTag("Icon_Avatar")
            )
        }
    }
}
